# aru_metadata_parser

./: LICENSE  README.md  pyproject.toml
aru_metadata_parser/: __init__.py  parse.py  utils.py
tests/: test_aru.py  test_parse.py  test_utils.py
