[tool.poetry]
name = "aru_metadata_parser"
version = "0.1.0"
description = "Parse metadata from ARUs including the AudioMoth"
authors = [
  "Sam Lapp <sammlapp@gmail.com>",
  "Sasha Syunkova <>",
  "Justin Kitzes <justin.kitzes@pitt.edu>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jkitzes/aru_metadata_parser"
packages = [{include = "aru_metadata_parser"}]
include = ["aru_metadata_parser/**/*.py"]

[tool.poetry.dependencies]
python = ">=3.8"
docopt = ">=0.6.2"
soundfile = ">=0.11"
pytz = ">=2015.7"

[tool.poetry.dev-dependencies]
black = "~=22.8"
pre-commit = ">=1.18"
sphinx = ">=2.1"
pytest = ">=5.1"
sphinx-rtd-theme = ">=0.4.3"
recommonmark = ">=0.6.0"
nbsphinx = ">=0.7.1"
m2r = ">=0.2"
docutils = "=0.17"

[tool.black]
line-length = 88
target_version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | dist
)/
'''

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
